# LAPH

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  __main__.py  gui.py  install.sh  install_laph.sh  main.py  pyproject.toml  pytest.ini  requirements.txt  run_laph.sh  state.txt  validate.py
.devcontainer/: devcontainer.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
config/: models.toml
configs/: models.toml  plugins.toml
core/: __init__.py  __version__.py  cli.py  config.py  constants.py  gui.py  installer_gui.py  llm_interface.py  logger.py  prompt_manager.py  repair_loop.py  runner.py  vision_interface.py
core/plugins/: __init__.py  base.py  exit_code_evaluator.py  llm_evaluator.py  ollama_coder.py  ollama_thinker.py  subprocess_runner.py
docker/: Dockerfile  WIP.txt
docs/: DEVELOPMENT.md
examples/: simple_task.json
prompts/: base_prompt.txt  coder_prompt.txt  thinker_interaction_prompt.txt  thinker_prompt.txt
tests/: test_dummy.py  test_gui.py  test_llm_generation.py  test_repair_interaction.py  test_repair_sanitizer.py
