[project]
name = "laph"
version = "0.1.0"
description = "Local Autonomous Programming Helper: an offline multi-agent code authoring assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "psutil",
  "Pillow",
  "pyautogui",
  "rich",
  "ttkbootstrap",
  "toml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[tool.black]
line-length = 88
exclude = '''/(
  \.(git|hg|mypy_cache|pytest_cache|venv)|
  _build|buck-out|build|dist
)/
'''

tool.ruff = { line_length = 88 }
