[project]
name = "laph"
version = "0.1.0"
description = "Local Autonomous Programming Helper: an offline multi-agent code authoring assistant."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "requests",
  "psutil",
  "Pillow",
  "pyautogui",
  "rich",
  "ttkbootstrap",
  "toml",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "black",
  "ruff",
]

[tool.black]
line-length = 88
exclude = '''/(
  \.(git|hg|mypy_cache|pytest_cache|venv)|
  _build|buck-out|build|dist
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
ignore_missing_imports = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true

[[tool.mypy.overrides]]
module = [
    "ttkbootstrap.*",
    "PIL.*",
    "psutil.*",
    "pyautogui.*",
    "toml.*"
]
ignore_missing_imports = true

